tests/snapshots/snapshot_tests__array_split_11.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_split_11.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int b N min) N) min)",
        "(= (Read-Int-Int (Write-Int-Int b_next N min_next) (- (* min N) N)) (Read-Int-Int b_next (- (* min N) N)))",
        "(= (Read-Int-Int (Write-Int-Int b N min_next) N) min_next)",
        "(= (Read-Int-Int (Write-Int-Int b N min) min) (Read-Int-Int b min))",
        "(= (Read-Int-Int (Write-Int-Int b N min) (- (* i_next N) N)) (Read-Int-Int b (- (* i_next N) N)))",
        "(= (Read-Int-Int (Write-Int-Int b N min_next) N) (Read-Int-Int b N))",
        "(= (Read-Int-Int (Write-Int-Int b N N) N) N)",
        "(= (Read-Int-Int (Write-Int-Int b min_next min_next) min_next) min_next)",
        "(= (Read-Int-Int (Write-Int-Int b min min) min) min)",
        "(= (Read-Int-Int (Write-Int-Int b N N) N) (Read-Int-Int b N))",
        "(= (Read-Int-Int (Write-Int-Int b N Z) N) Z)",
        "(= (Read-Int-Int (Write-Int-Int b N Z) N) (Read-Int-Int b N))",
        "(= (Read-Int-Int (Write-Int-Int b i N) N) (Read-Int-Int b N))",
        "(= (Read-Int-Int (Write-Int-Int b max_next max_next) (- (* N N) N)) (Read-Int-Int b (- (* N N) N)))",
        "(= (Read-Int-Int (Write-Int-Int b min min) min) (Read-Int-Int b min))",
        "(= (Read-Int-Int (Write-Int-Int b N N) (- (* N N) N)) (Read-Int-Int b (- (* N N) N)))",
        "(= (Read-Int-Int (Write-Int-Int b N N) (- (* max_next N) N)) (Read-Int-Int b (- (* max_next N) N)))",
        "(= (Read-Int-Int (Write-Int-Int b N N) (- (* i_next N) N)) (Read-Int-Int b (- (* i_next N) N)))",
        "(= (Read-Int-Int (Write-Int-Int b i N) (- (* max_next N) N)) (Read-Int-Int b (- (* max_next N) N)))",
        "(= (Read-Int-Int (Write-Int-Int b min N) (- (* N N) N)) (Read-Int-Int b (- (* N N) N)))",
        "(= (Read-Int-Int (Write-Int-Int b N max_next) N) max_next)",
        "(= (Read-Int-Int (Write-Int-Int b i i) i) i)",
        "(= (Read-Int-Int (Write-Int-Int b i i) i) (Read-Int-Int b i))",
        "(= (Read-Int-Int (Write-Int-Int b i N) (- (* i N) N)) (Read-Int-Int b (- (* i N) N)))",
        "(= (Read-Int-Int (Write-Int-Int b min N) min) N)",
        "(= (Read-Int-Int (Write-Int-Int b min N) (- (* i_next N) N)) (Read-Int-Int b (- (* i_next N) N)))",
        "(= (Read-Int-Int (Write-Int-Int b i N) i) N)",
        "(= (Read-Int-Int (Write-Int-Int b_next i_next i) (- (* N N) N)) (Read-Int-Int b_next (- (* N N) N)))",
        "(= (Read-Int-Int (Write-Int-Int b_next i_next i) i_next) i)",
        "(= (Read-Int-Int (Write-Int-Int b N N) (- (* i N) N)) (Read-Int-Int b (- (* i N) N)))",
        "(= (Read-Int-Int (Write-Int-Int b i max_next) (- (* i_next N) N)) (Read-Int-Int b (- (* i_next N) N)))",
    ],
}
